# bj

./: .gitignore  bj.db  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
api/: departments.py  districts.py  models.py  router.py  towns.py
api/auth/: auth.py  helpers.py  models.py
api/lands/: departments.py  districts.py  towns.py
core/: db.py
utils/: errors.py
