[tool.poetry]
name = "app"
version = "0.1.0"
description = "bj services"
authors = ["Hodonou SOUNTON <arkryonia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
sqlmodel = "^0.0.4"
uvicorn = {extras = ["standards"], version = "^0.15.0"}
httpx = {extras = ["cli"], version = "^0.20.0"}
PyJWT = "^2.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"
bpython = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
